7px padding-left? that doesnt even make sense --  RESOLVE LOGO HEADER VS. FOOTER vertical alignment issue later

--- a/styles/footer.less
+++ b/styles/footer.less
@@ -12,7 +12,7 @@ footer {
 	.justify-content(center);
 	.align-items(center);
 	.logo {
-		margin-left: 5px;						// not sure why this is need (look into later); aligns footer loger with header logo
+		margin-left: 7px;						// not sure why this is need (look into later); aligns footer loger with header logo
 	}
 	#FooterSignup {
 		text-align: center;
